--- a/Payroll_system/src/main/resources/application.properties
+++ b/Payroll_system/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+# = Spring Datasource
+spring.datasource.url=jdbc:mysql://cis175.cnmtakf9kiyo.us-east-1.rds.amazonaws.com:3306/payroll_system?useSSL=false
+spring.datasource.username=admin
+spring.datasource.password=JavaTeam_175
+# = Hibernate ddl auto (create, create-drop, update)
+spring.jpa.hibernate.ddl-auto = update
+# = Show log for each sql query
+spring.jpa.show-sql = true
